[package]
name = "listenbrainz-mpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
calloop = "0.10.5"
calloop-dbus = { version = "0.1.1", git = "https://github.com/StratusFearMe21/calloop-dbus" }
dbus = "0.9.6"
dirs = "4.0.0"
dotenvy_macro = "0.15.1"
libmpv = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "2.0.1", default-features = false }
libmpv-sys = { git = "https://github.com/StratusFearMe21/libmpv-rs", version = "3.1.0", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
ureq = { version = "2.6.0", features = ["json", "tls"], default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
